--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,8 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+.vscode
+
 # other crap
 Economic Participation and Opportunity.txt
 Educational Attainment.txt
