--- a/environment.yml
+++ b/environment.yml
@@ -7,10 +7,9 @@ channels:
 dependencies:
   - python=3.8
   - plotly-orca
+  - pandas
+  - plotly
   - pip:
-    - streamlit=0.73.0
-    - numpy=1.17.2
-    - pandas=0.25.1
-    - plotly=4.4.1
-    - psutil=5.8.0
-    - kaleido=0.1.0
+    - streamlit==0.73.0
+    - psutil==5.8.0
+    - kaleido==0.1.0
